--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "code-some-collection",
+  "name": "code-some-collection-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "install-deps": "npm install",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
