--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
+# Node modules
 backend/node_modules/
-backend/dist/
 frontend/node_modules/
-frontend/dist/
-backend/.env
-.idea/
-.DS_Store
-*.log
 
+# Build output
+backend/dist/
+frontend/dist/
+
+# Environment files
+*.env
+
+# IDE settings
+.idea/
+
+# macOS system files
+.DS_Store
+
+# Log files
+*.log
