--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "dompurify": "^3.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
