--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,18 @@
 {
   "name": "code-some-collection-backend",
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "install-deps": "npm install",
+    "dev:watch": "nodemon --watch src --exec tsx src/server-app.ts",
     "test": "jest",
-    "dev": "nodemon --watch src --exec tsx src/server-app.ts",
+    "lint:fix": "eslint . --fix",
     "build": "tsc"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
@@ -19,19 +23,23 @@
     "mongoose": "^8.9.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.2",
     "@types/supertest": "^6.0.2",
-    "@types/express": "^5.0.0",
-    "@types/mongoose": "^5.11.96",
     "cors": "^2.8.5",
+    "eslint": "^9.17.0",
+    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.15.0"
   }
 }
