--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,8 @@
 {
   "name": "code-some-collection-frontend",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +10,7 @@
     "install-deps": "npm install",
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "test": "jest"
   },
@@ -28,7 +31,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
